syntax = "proto3";

package interview;
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/any.proto";
option go_package = "github.com/NEKETSKY/mnemosyne/pkg/api/interview";

// The basic message containing the primary information about a interview.
message Interview {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "User json schema"     
      required: "interviewer_id"
      required: "student_id"
      required: "interview_date"
      required: "grade"
      required: "subjective_rating"
      required: "notes"
      required: "determined_english_level"
      required: "main_task"
      required: "question"
    }
  };
  uint32 id = 1;
  uint32 interviewer_id = 2;
  uint32 student_id = 3;
  string interview_date = 4;
  uint32 grade = 5;
  string subjective_rating = 6;
  string notes = 7;
  string determined_english_level = 8;
  uint32 main_task = 9;
  google.protobuf.Any question = 10;
}
//The basic message containing information about all interviews from db
message Interviews {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Interviews json schema"
      required: "interviews"
    }
  }; 
  repeated Interview interviews = 1;
}
//Basic request/response containing id of the interview
message Id{
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Id json schema"     
      required: "id"
    }
  }; 
    string id = 1;
}
